WebApp/src/components/Timetable/Timetable.scss
@import '../../styles/globals';
$border-width: 1px;
$border: $border-width solid $border-color;
.timetable {
    width: 100%;
    height: 100%;
    display: grid;
    border: $border;
    grid-template-rows: auto 1fr;
    grid-template-columns: auto 1fr;
    grid-template-areas: '. .' '. blocks';
    border: $border;
}

.border-cell {
    padding: 1em;
    border: $border;
    background-color: $background-color;
}

.centered {
    text-align: center;
}

.border-cells,
.blocks {
    grid-area: blocks;
}

.blocks {
    display: grid;
    grid-gap: $border-width * 2;
    border: $border-width solid transparent;
}

